--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,20 @@
 }
 
 body{
-  background: blue;
-  width: 100vw;
+  /* background: blue; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
 .container{
   width: 80%;
   background-color: yellow;
   display: flex;
-  width: 500px;
-  height: 500px;
+  width: 50%;
+  height: 50%;
+  min-width: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,10 +26,15 @@ body{
 }
 .row{
   display: flex;
-
+justify-content: center;
+align-items: center;
   width: 100%;
   height: 30%;
 }
+
+
+
+
 .element{
   width: 30%;
   height: 100%;
@@ -37,14 +46,21 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 7em;
+  font-family: 'Indie Flower', cursive;
+
 
 }
 .win{
-   animation: mymove 2s;
+   animation: mymove 1s ease-in-out;
   /* transition: 1s ease; */
   background: green;
 }
-
+.resultContainer{
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
 @keyframes mymove {
     0% {
         transform: scale(1.0);
@@ -56,4 +72,15 @@ body{
     100% {
         transform: scale(1.0);
     }
+}
+img{
+  width: 500px;
+  height: 500px;
+  display: block;
+}
+#playagain{
+  width: 100px;
+  height: 30px;
+  background-color: #48f5BF;
+  border-radius: 20px;
 }
