--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,11 @@ body{
   height: 100vh;
 }
 .container{
-  width: 80%;
-  background-color: yellow;
+  background-color: white;
   display: flex;
-  width: 50%;
+  width: 40%;
   height: 50%;
-  min-width: 200px;
+  min-width: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,16 +32,14 @@ align-items: center;
 }
 
 
-
-
 .element{
   width: 30%;
   height: 100%;
   min-width: 50px;
   min-height: 50px;
   margin: 5px;
-  background-color: black;
-  color: #fff;
+  background-color: #d9d9d9;
+  color: #272727;
   display: flex;
   align-items: center;
   justify-content: center;
